--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -4,7 +4,7 @@ Today we are going to look at how timely dataflow keeps track of progress.
 
 By that I mean, how does the timely dataflow runtime keep track of which operators might receive inputs at which logical times. That might sound like word salad, so let's recap a bit and try and get on the same page. If you haven't, you might want to start with [an introduction to timely dataflow](https://github.com/frankmcsherry/blog/blob/master/posts/2015-09-14.md). We are going to be especially interested in the `unary_notify` style of operator here, so if that is weird and unknown to you, best get clicking.
 
-Progress tracking is exciting (to me) because it turns out that if you do it well, you can write some pretty cool generalized dataflow frameworks. For example, by being very precise about progress (in a way that [Naiad](http://dl.acm.org/citation.cfm?id=2522738) before it was not), we can introduce some abstraction boundaries without giving up accurancy (and potential parallelism). These abstraction boundaries will make our lives easier, and let us write much more interesting (I think) dataflow computations.
+Progress tracking is exciting (to me) because it turns out that if you do it well, you can write some pretty cool generalized dataflow frameworks. For example, by being very precise about progress (in a way that [Naiad](http://dl.acm.org/citation.cfm?id=2522738) before it was not), we can introduce some abstraction boundaries without giving up accuracy (and potential parallelism). These abstraction boundaries will make our lives easier, and let us write much more interesting (I think) dataflow computations.
 
 ## Background
 
