--- a/posts/2015-12-19.md
+++ b/posts/2015-12-19.md
@@ -42,7 +42,7 @@ We are basically going to lift this idea from Naiad, but be careful to do fronti
 
 To guarantee that some input port will never again receive a message with some timestamp, we need to understand where timestamped messages come from. If we can put some restrictions into place, we can start to reason about whether one might or might not see a given timestamp, given the current state of the world. 
 
-Timely dataflow does impose restrictions on what timestamp an operator can use when it sends a message. When an operator receives an input with timestamp `t` it also receives a capability to send messages with that timestamp. The operator can send messages with timestamp `t` only if it hold a capability for a timestamp `t' <= t`. 
+Timely dataflow does impose restrictions on what timestamp an operator can use when it sends a message. When an operator receives an input with timestamp `t` it also receives a capability to send messages with that timestamp. The operator can send messages with timestamp `t` only if it holds a capability for a timestamp `t' <= t`. 
 
 This means that if we know about all of the outstanding messages (still in system queues) and all of the outstanding capabilities, and we look really really hard at the dataflow graph, we should be able to figure out if it is possible that a message with a certain timestamp might reach a specific input port.
 
@@ -52,8 +52,8 @@ Let's look at another hypothetical dataflow graph again, sort of like up above b
 
 Imagine that at the moment `input` only holds a capability to send messages with timestamp `3` and there are some messages going from `Op2` to `Op3` with timestamp `2`. By looking really hard and thinking, we can tell that 
 
-1. `Op1` and `Op2` that they won't receive any messages with timestamp `2`, and 
-2. `Op3` and `Op4` that they won't receive any messages with timestamp `1`. 
+1. `Op1` and `Op2` won't receive any messages with timestamp `2`, and 
+2. `Op3` and `Op4` won't receive any messages with timestamp `1`. 
 
 If this was all we needed to do, which is roughly the case in a directed acyclic graph, we could just replace our "hard looking and thinking" with reachability information from each output port to each input port. As messages and capabilities are retired, we tweak the open timestamps at each input port they can reach, and do something exciting if the frontier advances. 
 
