--- a/posts/2016-05-19.md
+++ b/posts/2016-05-19.md
@@ -10,7 +10,7 @@ The post starts with some background about differential privacy, their article, 
 
 I think the authors have the causality backwards here. At least for [the post I wrote](https://github.com/frankmcsherry/blog/blob/master/posts/2016-02-03.md), their arguments are engaged on their merits and found (by me) lacking. The subsequent attempts to explain the authors' inaccurate statements leads to questions about their intelligence or honesty (or both!). 
 
-The authors are right that I could have skipped calling them out on their shortcomings, but which would you prefer: civil but dishonest discourse, or candid and honest discourse? Should we just "teach the controversy"? The Fool's Gold paper has a position (the clue is in the name): it calls out several people by name for not understanding apparent issues with differential privacy.
+The authors are right that I could have skipped calling them out on their shortcomings, but which would you prefer: civil but dishonest discourse, or candid and honest discourse? The Fool's Gold paper has a position (the clue is in the name): it calls out several people by name for not understanding apparent issues with differential privacy.
 
 > The not-so-subtle subtext is “don’t listen to these idiots. They are bad people.”
 
