--- a/posts/2016-05-19.md
+++ b/posts/2016-05-19.md
@@ -22,7 +22,7 @@ I still haven't determined if they are "bad" in the moral sense of actively mali
 
 There absolutely *are* limitations to differential privacy, and they do have significance. They are not, however, the limitations presented by the authors. I think that pushing on these limitations is a *great* thing for research to do, but pointing at non-limitations and saying "it can never work" is not helpful. Identify the actual limitations, determine if they are fundamental (often they are not), and accomplish science. I dare you.
 
-Also, I'm guessing that "have fallen out of vogue" is code for "have substandard privacy guarantees". No one is talking about differential privacy because it is easy to use, it is interesting because it provides real and meaningful privacy guarantees.
+Also, I'm guessing that "have fallen out of vogue" is code for "have substandard privacy guarantees". No one is talking about differential privacy because it is easy to use, it is interesting because it provides real and meaningful privacy guarantees. If the "out of vogue" approaches did this, I wouldn't be here.
 
 And just to be totally clear, I don't have any issues with people who have trouble using differential privacy. It is not yet easy to use. I would like to make it more easy to use. Until that happens, keep using the tools you understand. However, if you have any interest in the world becoming a better place, the right way to do this is to engage rather than dissemble. 
 
