de-jekyll'd things

--- a/posts/2015-04-19.md
+++ b/posts/2015-04-19.md
@@ -12,7 +12,7 @@ In this post we walk through how the data-parallel bit happens, and detail some 
 
 Let's start at the top, with some code we didn't see in the previous post: a `main` method:
 
-{% highlight rust %}
+```rust
 fn main() {
     let workers = 4; // whatever you like here!
     let mut guards = Vec::new();
@@ -23,7 +23,7 @@ fn main() {
                         .unwrap());
     }
 }
-{% endhighlight %}
+```
 
 Here we identify some desired number of workers, ask `ProcessCommunicator` (whoever that is) to create a new vector (of something), and for each element of this vector we start up a thread. Now, the elements of that vector have been suggestively named `communicator`, and indeed they each implementation a `Communicator` trait. The `scoped` method is where the thread is started, and as you can see the only input it takes is one of these communicators. What could they possibly do?
 
@@ -31,14 +31,14 @@ Here we identify some desired number of workers, ask `ProcessCommunicator` (whoe
 
 The `Communicator` trait provides the *only* point of contact between workers in timely dataflow. It has a fairly simple definition, so let's look at it:
 
-{% highlight rust %}
+```rust
 pub trait Communicator {
     fn index(&self) -> u64;
     fn peers(&self) -> u64;
     fn new_channel<T:Send+Columnar+Any>(&mut self)
         -> (Vec<Box<Pushable<T>>>, Box<Pullable<T>>);
 }
-{% endhighlight %}
+```
 
 The only functionality a communicator exposes to workers is to tell them their identity, the number of other workers, and to set up channels with the other workers. The `new_channel` method returns some targets the worker can push typed data at (one per worker) and one source the worker can pull from.
 
@@ -51,7 +51,7 @@ That's all. If workers want to communicate in any other ways, they'll need to cr
 
 Let's look at the last bit of code from the previous post, the `triangles` method referenced just above, in which we define the dataflow computation and set it going. I'm going to base this off of the code as it currently exists in [the repository](https://github.com/frankmcsherry/dataflow_join), which has a few syntactic differences from the previous post.
 
-{% highlight rust %}
+```rust
 fn triangles<C: Communicator>(communicator: C) {
 
     // load up our fragment of the graph
@@ -81,7 +81,8 @@ fn triangles<C: Communicator>(communicator: C) {
         // introduce input
     }
 }
-{% endhighlight %}
+```
+
 Perhaps the most important thing to observe about this method is that it is *per-communicator* logic. Each worker will call this method independently, and so they need to make sure they act in concert. This mostly boils down to constructing channels in some consistent order, and not going off and doing something else while other workers are waiting for you.
 
 Ideally the code isn't too threatening.  The first few lines are related to the previous post, where we load up some graphs and define "prefix extenders" used to drive the aforementioned neat algorithm.
@@ -92,9 +93,9 @@ There are some very important lines, though, so let's look a bit more carefully 
 
 The point at which the dataflow graph first comes in to existence is when we wrap up our trusty communicator in a `GraphRoot`. This is that momentous line of code:
 
-{% highlight rust %}
+```rust
 let mut root = GraphRoot::new(communicator);
-{% endhighlight %}
+```
 
 A `GraphRoot` is pretty simple, actually. It is the simplest implementator of the `GraphBuilder` trait, whose main role in life is to hand back references to a `Communicator` so that we can make channels.
 
@@ -104,9 +105,9 @@ There are much more advanced and interesting, implementors of `GraphBuilder`. Le
 
 The next fragment of code creates a dataflow subgraph.
 
-{% highlight rust %}
+```rust
 let mut subgraph = root.new_subgraph();
-{% endhighlight %}
+```
 
 The `new_subgraph()` method, defined by the `GraphBuilder` trait, returns a `SubgraphBuilder`.
 This is that advanced and interesting implementor of `GraphBuilder` I mentioned above.
@@ -122,18 +123,20 @@ The `Scope` trait defines the methods different components of a timely dataflow 
 There are more details in [the link above](http://www.frankmcsherry.org/dataflow/naiad/2014/12/29/TD_time_summaries.html), and much more to say about the progress tracking protocol.
 
 Our first example of a scope is actually in the very next line of code:
-{% highlight rust %}
+
+```rust
 let (input, stream) = subgraph.new_input();
-{% endhighlight %}
+```
 
 The `input` method is provided by an extension trait on implementors of `GraphBuilder`. Let's see it.
 
-{% highlight rust %}
+```rust
 pub trait InputExtensionTrait<G: GraphBuilder> {
     fn new_input<D:Data>(&mut self) -> (InputHelper<G::Timestamp, D>,
                                         Stream<G::Timestamp, D>);
 }
-{% endhighlight %}
+```
+
 Ok, that might have been too much information. We see that `new_input` does return two things, and apparently these are an `InputHelper` and `Stream`, but what these are is presently a total mystery. Also, what does all that `G::Timestamp` noise mean?
 
 Last things first, `G::Timestamp` is an *associated type* of the graph builder `G`. Each graph builder has an associated timestamp, and all scopes that graph builder will tolerate must use that timestamp. Both `InputHelper` and `Stream` are defined in terms of a specific common timestamp, given by `G`. They each also have a second type parameter, `D`, which is the type of data the input will pass along.
@@ -162,20 +165,22 @@ What we have at the moment is a notion of an `ActiveStream`, which is the inform
 
 We create active streams from inactive streams by calling `enable` with a graph builder argument.
 
-{% highlight rust %}
+```rust
 stream.enable(builder)
       .extend(b_extend)
       .extend(c_extend);
-{% endhighlight %}
+```
 
 You might look at this and say: "whoa, is `builder` gone now?" In this case, yes. However, you can always get it back from an active stream; we just happened to discard the results in this case.
 
 Additionally, and this was someone else's clever idea, not mine: there is a blanket implementation
-{% highlight rust %}
+
+```rust
 impl<G: GraphBuilder> GraphBuilder for &mut G {
     // lots of "fn func(&mut self) { (**self).func() }"
 }
-{% endhighlight %}
+```
+
 which says we can use a mutable reference `&mut G` anywhere we would use a `G: GraphBuilder`. So we could have replaced `builder` up there with `&mut builder`, and not risked losing track of it.
 
 ## Actually adding more scopes
@@ -186,7 +191,7 @@ In [the previous post](http://www.frankmcsherry.org/dataflow/relational/join/201
 
 I'm going to use `propose` as the simplest implementation. The other two are roughly the same, but with slightly more inner logic. The `propose` implementation uses an extension method `unary` that I've written, wrapping the implementation of a scope with one input and one output. We will move to its implementation in just a moment, but let's see its arguments to understand what it needs to know.
 
-{% highlight rust %}
+```rust
 impl<P, E, G, PE> StreamPrefixExtender<G, P, E> for Rc<RefCell<PE>>
 where P: Data+Columnar,
       E: Data+Columnar,
@@ -205,7 +210,7 @@ where P: Data+Columnar,
             }
         })
     }
-{% endhighlight %}
+```
 
 The `unary` method takes three arguments: a description of how its inputs need to be exchanged (to make sure the data arrive at the right worker), a `String` naming the operator, and logic that takes a `handle` through which inputs can be read and outputs sent.
 
@@ -230,11 +235,11 @@ That was a pretty long paragraph, so maybe it isn't all that simple. But, it isn
 
 The final bit of code looks like this:
 
-{% highlight rust %}
+```rust
 while root.step() {
     // introduce input
 }
-{% endhighlight %}
+```
 
 That looks pretty simple and harmless, but it is what sets the whole dataflow computation into motion.
 
