--- a/posts/2015-05-12.md
+++ b/posts/2015-05-12.md
@@ -106,12 +106,12 @@ The combination of `iterate` with our `step` function produces a breadth-first s
 
 The only non-obvious step is that the `edges` stream needs to be brought in to the body of `iterate`. This is not easy to do automatically (at least, not at the moment), and so we explicitly do this with the help of a stream that is inside the iterative context: `dists`.
 
-{% highlight rust %}
+```rust
 // iteratively expand distances
 roots.iterate(|dists| {
     step(&dists, &dists.context().enter(&edges))
 }
-{% endhighlight %}
+```
 
 In the fullness of time it may make sense for `iterate` to take a function of two parameters, a stream like `dists` and some sort of `context` object that does the things we had to ask `dists` to do for us.
 
