--- a/posts/2016-02-02.md
+++ b/posts/2016-02-02.md
@@ -1,3 +1,5 @@
+**IN PROGRESS**
+
 ## Data structures in Rust
 
 Let's work through differential dataflow's main data structure: the neat and clever way we keep track of all of the changes collections experience. We are doing this both to explain the roadmap for this part of the project, but also to explain a bit about Rust's notions of ownership and borrowing, and to give examples of where things work well and where they are a bit painful.
@@ -146,9 +148,9 @@ It's a neat trait, but it isn't really all that general. It has a bunch of baked
 	fn insert<I: Iterator<Item=(Self::Key, Self::Time, Self::Value, i32)>>(&mut self, iter: I);
 ```
 
-Notice that the `Item` type is a tuple of *owned* types: we are still absolutely getting ownership here, not just passing references to values. 
+Notice that the `Item` type is a tuple of *owned* types: we are still absolutely getting ownership here, not just passing references to values. The difference is that we are letting the caller provide the code to produce the owned values.
 
-Here is another baked assumption: are we really going to use `Vec<(T, Vec<(V, i32)>)>` for our storage? It is going to return or get a reference to one if it doesn't exist. Let's introduce a few more associated types, and do some pretty neat things.
+Here is another baked assumption: are we really going to use `Vec<(T, Vec<(V, i32)>)>` for our storage? It is going to be pretty hard to return or get a reference to one if it doesn't exist. Let's introduce a few more associated types, and do something neat.
 
 ```rust
 	...
@@ -186,7 +188,9 @@ What we would like to write is
 
 This would be totally great. But there is a horrible bit of a mess of a dark secret. 
 
-The string `Iterator<Item=(&V, i32)>` doesn't actually correspond to a type. Rather, it is a family of types. `Iterator<Item=(&'a V, i32)>` is a well defined type for each `'a`, but each are different. Ideally we could just write something like
+The string `Iterator<Item=(&V, i32)>` doesn't actually name a type. Rather, it is a family of types. `Iterator<Item=(&'a V, i32)>` is a well defined type for each `'a`, but each are different. 
+
+Ideally we could write something like
 
 ```rust
 	...
@@ -199,7 +203,7 @@ The string `Iterator<Item=(&V, i32)>` doesn't actually correspond to a type. Rat
 	...
 ```
 
-but, we can't. This apparently corresponds to a concept called higher-kinded types, in which one writes about *kinds* or families of types.
+but, we can't. This apparently corresponds to a concept called higher-kinded types, in which one writes about *kinds* or families of types. I say "apparently" because this is something people like to get particular about, and I don't want to set them off.
 
 There is a cunning trick you can employ, which I'll mention in the interest of completeness, but not elaborate on in case it ends up being an anti-pattern. Roughly, we can make a version of the `Trace` trait that has an `'a` lifetime parameter, I've called mine `TraceRef<'a>`, at which point you can use `'a` in the definition of the trait. For example,
 
@@ -222,4 +226,38 @@ impl<'a> TraceRef<'a> for &'a MyStruct {
 }
 ```
 
-See, we implement `TraceRef<'a>` for references to our struct, rather than for the struct itself. Since each reference has a lifetime we get a name for the lifetime we'll have in the iterators.
+See, we implement `TraceRef<'a>` for references to our struct, rather than for the struct itself. Since each reference has a lifetime we get a name for the lifetime we'll have in the iterators. It's not the most attractive answer, and involves some more baggage when we start to use these traits, but it does seem to work for now.
+
+### Moving along
+
+Ok, Rust lessons aside, let's talk about actual implementations of this trait.
+
+First off, `remove` only existed up above for pedagogical reasons. You don't remove things from traces. So, we'll scratch `remove`, which is nice because it means our traces are more like append-only data structures: each are logically equivalent to an append-only list, but may have an optimized physical structure to make `lookup` fast.
+
+#### Implementation 0: `HashMap`
+
+I mean, let's pretend that we will do that. It's pretty easy, and roughly works. Performance is a bit of a disaster, though.
+
+**TODO**: Actually implement and measure.
+
+#### Implementation 1: `Basic`
+
+The arrangement branch of the differential repo has a vanilla implementation of `Trace` named `Basic`. It is roughly a pile of pairs `(T, Vec<(V,i32)>)` and for each key `K` a linked list of offsets into these (each key gets the range from its offset to the next keys offset). This has a pretty efficient `insert` implementation: all tuples for a time `T` happen to arrive at the same time, so we drop them in to a new vector, sort by `key`, push it on the list, and then tweak the heads of the linked lists for each involved key. The `lookup` implementation walks through the linked list for `key` and iterates over the contiguous slices of data.
+
+This works, and isn't bad in lots of cases, but it has a few defects. 
+
+1. Differential dataflow is meant to work with low latencies, which means lots and lots of distinct times. Having independent allocations for each time means lots of allocations. Lots of allocations means lots of random accesses when we need to sort through them.
+
+2. The time-centric layout doesn't co-locate data for the same key. When we call `lookup`, we'd really like to walk through as little memory as possible, and we really have no choice here other than to do at least one random access for each time at which the key has a difference.
+
+3. We are going to want to compact traces, which means pointing at a hunk of the trace, grinding on it without mutating it, and then quickly swapping in the results of our computation. The large number of fine-grained allocations makes this a bit of a pain.
+
+#### Implementation 2: `LSMTrie`
+
+The implementation I'm leaning towards is a log-structured merge trie. It's like a [log-structured merge tree](https://en.wikipedia.org/wiki/Log-structured_merge-tree) except the data are in a trie rather than a tree. It's otherwise pretty similar; I'll explain. The reasons I like it are mostly the reasons people like LSMTs, with a few additional properties related to Rust's ownership.
+
+A trie is a way of storing ordered sequences that compresses common prefixes. In our case it is especially easy:
+
+From a `Vec<(K, T, V, i32)>`, sort it by `K` then by `T` then by `V`. All keys are now in a contiguous block, within each block all times are contiguous, and finally if there are repetitions of values (there shouldn't be) they will be contiguous. So, we write down each key in sequence, and then the number of distinct times associated with it. We write down each of these distinct times, and the number of distinct values associated with each of them. Finally, we write down all of the `(V, i32)` pairs.
+
+A log-structured merge trie is a set of tries, at most one for each power-of-two size, where updates are absorbed into new small tries, and any two tries whose sizes lie in the same power-of-two interval are merged.
