code example polished

--- a/posts/2016-03-27.md
+++ b/posts/2016-03-27.md
@@ -280,20 +280,22 @@ Anyhow, let's write the algorithm in differential dataflow, starting from a coll
 
 The algorithm repeatedly thins out these possible assignments by proposing the best ones, and discarding any that are rejected. It does this by re-keying the tuples by `name_i`, putting the corresponding preference first, then calling `topk` with the k value of `1`:
 
-    initial.iterate(|active| {
-      // key records by a, order by pa.
-      let props =
-        active.map(|x| (x.a,(x.pa,x.b,x.pb)))
-              .topk(1, |x| x);
+```rust
+initial.iterate(|active| {
+  // key records by a, order by pa.
+  let props =
+    active.map(|x| (x.a,(x.pa,x.b,x.pb)))
+          .topk(1, |x| x);
 
-      // key records by b, order by pb.
-      let accpt =
-        props.map(|x| (x.b,(x.pb,x.a,x.pa)))
-             .topk(1, |x| x);
+  // key records by b, order by pb.
+  let accpt =
+    props.map(|x| (x.b,(x.pb,x.a,x.pa)))
+         .topk(1, |x| x);
 
-      // discard unaccepted proposals.
-      active.except(props.except(accpt))
-  })
+  // discard unaccepted proposals.
+  active.except(props.except(accpt))
+})
+```
 
 The process terminates when there are no remaining options for unmatched nodes.
 
