--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -8,15 +8,15 @@ This paper appeared at [Usenix Security, 2014](https://www.usenix.org/system/fil
 
 The paper claims two main contributions: 
 
-1. They describe an attack, named *model inversion*, which "given the model and some demographic information about a patient, can predict the patient’s genetic markers."
+First, they describe an attack, named *model inversion*, which "given the model and some demographic information about a patient, can predict the patient’s genetic markers."
 
 > "Our results indicate that understanding the implications of differential privacy for pharmacogenomic dosing is a difficult matter—even small values of ε might lead to unwanted disclosure in many cases"
 
-2. They find that "for privacy budgets effective at preventing attacks, patients would be exposed to increased risk of stroke, bleeding events, and mortality."
+Second, they find that "for privacy budgets effective at preventing attacks, patients would be exposed to increased risk of stroke, bleeding events, and mortality."
 
 > "We conclude that *current* DP mechanisms do not simultaneously improve genomic privacy while retaining desirable clinical efficacy,"
 
-Oh geez. This doesn't sound like a "best" paper for differential privacy *at all*! Actually this sounds pretty bad. 
+Oh geez. This doesn't sound like a "best" paper for differential privacy *at all!* Actually this sounds pretty bad. 
 
 Fortunately, it is mostly wrong. Both of these reported conclusions have serious issues. 
 
@@ -50,7 +50,7 @@ If you switch Warfarin doctors and your new doctor asks you what dosage you are 
 
 The flip side is that since the accuracy of this "attack" derives from how well-understood is the connection between markers and stable Warfarin dosing, accuracy for the attack largely corresponds to accuracy of dosing predictions based on markers. As scientists get better at predicting the connection, getting right to the stable dose from your markers, the "attack" gets worse and more people get the dosages they need. 
 
-> The paper's first observation is really just that dosing people with Warfarin based on their genetic markers may disclose information about their genetic markers to people who see the dose.
+	The paper's first observation is really just that dosing people with Warfarin based on their genetic markers may disclose information about their genetic markers to people who see the dose.
 
 It's kinda like how putting a cast on someone's foot may disclose information about the brokenness of their foot. Except in this case, the cast is invisible and you would have to tell people about it for them to know. You could desperately wish people didn't know that casts are used for breaks, and that maybe differential privacy could suppress that information, but that train has left the station.
 
@@ -98,7 +98,7 @@ This figure reveals that small epsilon pretty much kills people. And if you use 
 
 Imagine you are going in for your Warfarin dosing, and are told "often we use 10mg when we don't know any better, but we've just gotten this pile of literally worthless measurements and we are going to dose you based on them." I'm guessing you'd say "10mg please".
 
-The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so they should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by the accuracy of the measurements. 
+The important feature here is that we know how valuable the measurements are. You know that with epsilon = 0 there is no value, and so they should not adjust your prior strategy of 10mg dosing. A similar correction is *supposed* to apply to Figure 8 too: rather than just use the results of noisy measurements, integrate them with your prior belief that 10mg might be fine, weighted by your confidence in the measurements. 
 
 If you do this properly (which might be hard; it's well-defined mathematically, but perhaps challenging computationally), the differential privacy curves in Figure 8a should start at the `Fixed 10mg dose` line and as you increase epsilon approach the `LR` line (the non-privacy linear regression). There is no reason to believe that the curves should approach `LR` quickly, though it probably wouldn't be any slower than they do now. The important difference is that everywhere in Figure 8a that DP is worse than `Fixed 10mg dose` it should be no worse (perhaps with some variation because randomness).
 
