--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -38,7 +38,7 @@ This would be seriously bad news, because other than the demographic information
 
 But, what they meant to say, once you've read the paper, is actually
 
-> "an attacker, given the model, some demographic information about a patient, *and the patient's stable Warfarin dosage*, can predict the patient’s genetic markers.",
+> "an attacker, given the model, some demographic information about a patient, **and the patient's stable Warfarin dosage**, can predict the patient’s genetic markers.",
 
 Oops, they forgot to tell you that their attacker also gets to look at the patient's stable dose of the drug! You know, that thing that is presumed to be correlated with the genetic markers. Maybe the information isn't actually leaking through the model after all.
 
