--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -26,7 +26,7 @@ If you can't bear the suspense, the corresponding issues are:
 
 2. They didn't actually use statistical inference when they applied it to their target domain, so they take patients off of the baseline treatment even when the confidence they should do so is not high. When epsilon is small, you should be leaving patients on the baseline treatment because you lack strong evidence to do anything else; it seems they mostly just randomly dose patients in this case. Mortality ensues.
 
-In more detail...
+I should say, the paper has a **LOT** of cool info on Warfarin, and you get a good amount of context on how these things actually need to work. I don't really dig their scientific methods, but I would totally read the paper anyhow for the incidental learnings.
 
 ## Issue 1
 
