--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -48,7 +48,7 @@ The attack they describe isn't actually violating differential privacy, or compr
 
 If you switch Warfarin doctors and your new doctor asks you what dosage you are currently taking, and once told says "you must have marker XYZ huh?" has the new doctor just violated your privacy? No, you told them your dose, and they just know the connection between tests and doses generally. While it may feel like a "privacy violation" to you, it isn't one that results from mishandling your data; it just comes from modern science being good at knowing things about humans, and that you said something (your dosing) that spilled the beans.
 
-It's kinda like how putting a cast on someone's foot may disclose information about the brokenness of their foot. Except in this case, the cast is invisible and you would have to tell people about it for them to know. You could desperately wish people didn't know that casts are used for breaks, and that maybe differential privacy could suppress that information, but that train has left the station.
+It's kinda like how putting a cast on someone's foot may disclose information about the brokenness of their foot. Except in this case, the cast is invisible and you would have to tell people about it for them to know. You could desperately wish people didn't know that casts are used for breaks, and that maybe differential privacy could have suppressed that information back when casts were invented, but that train has left the station.
 
 The flip side is that since the accuracy of this "attack" derives from how well-understood is the connection between markers and stable Warfarin dosing, accuracy for the attack largely corresponds to accuracy of dosing predictions based on markers. As scientists get better at predicting the connection, getting right to the stable dose from your markers, the "attack" gets worse and more people get the dosages they need. 
 
