--- a/posts/2016-06-14.md
+++ b/posts/2016-06-14.md
@@ -160,7 +160,7 @@ The first reason is that model inversion misdiagnoses the source of the privacy 
 
 The second reason is that the risk introduced over fixed dosing was primarily due to ignoring the statistical information about the differentially private measurements. The confidence associated with the measurement is (or should be) an important part of determining by how much you depart from your baseline treatment. That didn't happen in these experiments. The observed increased risk over fixed dosing is there because the use of statistical data without statistical techniques introduced it. 
 
-	The authors kill (hypothetical) people, not differential privacy. ;)
+	Differential privacy doesn't kill (hypothetical) people, these authors do. ;)
 
 ### Homework for the Usenix Security crowd
 
